--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,13 +1,6 @@
-server.port=9091
-
-#ÉèÖÃsessionÊ§Ğ§Ê±¼ä,Ê±¼äÎª24Ğ¡Ê±
-#server.servlet.session.timeout=PT24H
-#ÉèÖÃtomcatµÄ·ÃÎÊÊıÁ¿
-server.tomcat.max-threads=1000
-server.tomcat.max-connections=100
 
 server.servlet.context-path=/
-#ÉèÖÃÉÏ´«ÎÄ¼ş´óĞ¡£¬²»ÏŞ´óĞ¡
+#è®¾ç½®ä¸Šä¼ æ–‡ä»¶å¤§å°ï¼Œä¸é™å¤§å°
 spring.servlet.multipart.maxFileSize=-1
 spring.servlet.multipart.maxRequestSize=-1
 spring.mvc.view.prefix=/
@@ -32,18 +25,18 @@ spring.datasource.url= jdbc:sqlite:E:\\Tooling\\sqlite\\test.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 #spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
 spring.jpa.database-platform=com.rb.sql.SQLiteDialect
-# ÏÔÊ¾ºóÌ¨´¦ÀíµÄSQLÓï¾ä
+# æ˜¾ç¤ºåå°å¤„ç†çš„SQLè¯­å¥
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #debug=true
 #spring.jpa.generate-ddl=true
-# ×Ô¶¯¼ì²éÊµÌåºÍÊı¾İ¿â±íÊÇ·ñÒ»ÖÂ£¬Èç¹û²»Ò»ÖÂÔò»á½øĞĞ¸üĞÂÊı¾İ¿â±í
+# è‡ªåŠ¨æ£€æŸ¥å®ä½“å’Œæ•°æ®åº“è¡¨æ˜¯å¦ä¸€è‡´ï¼Œå¦‚æœä¸ä¸€è‡´åˆ™ä¼šè¿›è¡Œæ›´æ–°æ•°æ®åº“è¡¨
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #spring.thymeleaf.prefix=classpath:/view/
-#Ä£°å¼ÓÔØÂ·¾¶
-#spring.freemarker.template-loader-path=classpath:/view/#·ÇtemplatesÄ¿Â¼ÊÇĞèÒªÖ¸¶¨Ä£°åÂ·¾¶µÄ£¬thymeleafÄ¬ÈÏµÄÇ°×ºÊÇtemplat
-#ÊÓÍ¼²ã¿ØÖÆ
+#æ¨¡æ¿åŠ è½½è·¯å¾„
+#spring.freemarker.template-loader-path=classpath:/view/#étemplatesç›®å½•æ˜¯éœ€è¦æŒ‡å®šæ¨¡æ¿è·¯å¾„çš„ï¼Œthymeleafé»˜è®¤çš„å‰ç¼€æ˜¯templat
+#è§†å›¾å±‚æ§åˆ¶
 #spring.thymeleaf.view.prefix=classpath:/templates/
 #spring.thymeleaf.view.suffix=.html
 #spring.thymeleaf.mode = HTML
@@ -54,9 +47,9 @@ spring.jpa.database-platform=com.rb.sql.SQLiteDialect
 #spring.resources.chain.strategy.content.paths=/**
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-# ÉèÖÃ¿ØÖÆÌ¨²ÊÉ«´òÓ¡
+# è®¾ç½®æ§åˆ¶å°å½©è‰²æ‰“å°
 #spring.output.ansi.enabled=ALWAYS
-#ÉèÖÃÈÕÖ¾ÎÄ¼şÊä³ö
+#è®¾ç½®æ—¥å¿—æ–‡ä»¶è¾“å‡º
 logging.file=E:/Tooling/spring.log
 #logging.path=./logs
 #logging.file=C:/log/spring.log
