--- a/application-dev.properties
+++ b/application-dev.properties
@@ -50,7 +50,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 # 设置控制台彩色打印
 #spring.output.ansi.enabled=ALWAYS
 #设置日志文件输出
-logging.file=E:/Tooling/spring.log
+logging.file=D:/Tooling/spring.log
 #logging.path=./logs
 #logging.file=C:/log/spring.log
 logging.level.root=info
